--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "page-object",
   "version": "1.0.0",
-  "description": "Rama para Cypress usando patrón Screenplay - Primera  Implementación",
+  "description": "Rama para Cypress usando patrón Screenplay - POO",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
